# NEXUS

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SYSTEM_SPEC.md  claude.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.qa.yml  docker-compose.test.yml  docker-compose.yml  plan.md  pyproject.toml  state.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
data/: config.example.yaml
data/benchmarks/: forecast-benchmark-replay-2025-10-01-2026-03-15.json  forecast-benchmark-replay-2026-03-10-2026-03-15.json  forecast-kalshi-loop-2026-03-15.json
data/fixtures/: kalshi_benchmark_full.json  kalshi_benchmark_midrange.json
data/sources/: discovered_sources.yaml  global_registry.yaml
docs/: benchmark-results.md  demo-explore.html  demo-forward-look.html  demo-page.html  demo-threads.html  demo.html  index.html  north-star.md  pipeline-audit.md  pipeline-parameters.md  pipeline.html  product-north-star.md  release-checklist.md
docs/future-projection/: architecture-proposal.md  (+11 more)
reviews/: meta-review-prompt.md
scripts/: analyze_kalshi_benchmark.py  backfill_relationships.py  backfill_thread_events.py  backtest_hybrid_funnel.py  build_kalshi_fixture.py  capture_discoveries.py  consolidate_threads.py  deliver_chinese.py  e2e-cli-entrypoint.sh  get_chat_id.py  migrate_to_sqlite.py  multi_smoke.py  populate_thumbnails.py  purge_and_reimport_benchmarks.py  redeliver.py  render_chinese.py  render_synthesis.py  retry_audio.py  run_actor_kalshi.py  run_and_deliver.py  run_judge.py  smoke_test.py  test_quick_mode.py
tests/: conftest.py  test_multi_smoke.py  test_runner.py  test_shutdown.py  test_signals.py
(+340 files in other folders)
